--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="btn-group">
             <!-- Update these links later! -->
             <a href="https://www.youtube.com" class="btn btn-youtube">Visit YouTube Channel</a>
-            <a href="https://www.tes.com" class="btn btn-tes">View IGCSE Shop (TES)</a>
+            <a href="<a href="https://www.tes.com/teaching-resources/shop/MathsManBill" class="btn btn-tes">View IGCSE Shop (TES)</a>" class="btn btn-tes">View IGCSE Shop (TES)</a>
         </div>
     </div>
 </body>
