--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
         </p>
         <div class="btn-group">
             <!-- Update these links later! -->
+            <a href="1.1 Natural Numbers and Integers.pdf" class="btn btn-youtube" style="background-color: #059669; border-color: #059669;">Download Worksheet 1.1 (Free)</a>
+            <a href="1.2 Squares and Cubes.pdf" class="btn btn-youtube" style="background-color: #059669; border-color: #059669;">Download Worksheet 1.2 (Free)</a>
+            <a href="1.3 Prime Numbers, HCF, LCM.pdf" class="btn btn-youtube" style="background-color: #059669; border-color: #059669;">Download Worksheet 1.3 (Free)</a>
+            <a href="1.4 Rational and Irrational Numbers.pdf" class="btn btn-youtube" style="background-color: #059669; border-color: #059669;">Download Worksheet 1.4 (Free)</a>
             <a href="https://www.youtube.com" class="btn btn-youtube">Visit YouTube Channel</a>
             <a href="https://www.tes.com/teaching-resources/shop/MathsManBill" class="btn btn-tes">View IGCSE Shop (TES)</a>
         </div>
