--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <a href="https://payhip.com/b/IVWzJ" class="btn btn-number">Buy Number Booklet (£14.99)</a>
             
             <!-- Algebra Booklet -->
-            <a href="PASTE_ALGEBRA_LINK_HERE" class="btn btn-algebra">Buy Algebra Booklet (£14.99)</a>
+            <a href="https://payhip.com/b/wRN86" class="btn btn-algebra">Buy Algebra Booklet (£14.99)</a>
         </div>
 
         <!-- FREEBIES SECTION -->
