--- a/index.html
+++ b/index.html
@@ -76,12 +76,12 @@
         
         <div class="btn-group">
             <!-- MAKE SURE THESE MATCH YOUR FILENAMES ON GITHUB EXACTLY -->
-            <a href="1.1 Natural Numbers.pdf" class="btn btn-free">1.1 Natural Numbers</a>
+            <a href="1.1 Natural Numbers and Integers.pdf" class="btn btn-free">1.1 Natural Numbers</a>
             <a href="1.2 Squares and Cubes.pdf" class="btn btn-free">1.2 Squares & Cubes</a>
         </div>
         <div class="btn-group">
-            <a href="1.3 Prime Numbers.pdf" class="btn btn-free">1.3 Primes, HCF, LCM</a>
-            <a href="1.4 Rational Numbers.pdf" class="btn btn-free">1.4 Rational & Irrational</a>
+            <a href="1.3 Prime numbers, HCF, LCM.pdf" class="btn btn-free">1.3 Primes, HCF, LCM</a>
+            <a href="1.4 Rational and Irrational Numbers.pdf" class="btn btn-free">1.4 Rational & Irrational</a>
         </div>
 
         <!-- CONNECT SECTION -->
