--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <meta property="og:image" content="https://bradleysmaths.co.uk/logo.png"> <!-- Optional: Add a logo image later -->
 
     <!-- 2. AISEO SCHEMA (Defining the Brand, not the Person) -->
+    <!-- 2. AISEO SCHEMA (Defining the Brand and ALL Products) -->
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
@@ -50,6 +51,45 @@
             "priceCurrency": "GBP",
             "availability": "https://schema.org/InStock",
             "url": "https://payhip.com/b/wRN86"
+          }
+        },
+        {
+          "@type": "Product",
+          "name": "GCSE Number Booklet",
+          "description": "Complete Higher Tier Number syllabus worksheets and answers.",
+          "brand": { "@type": "Brand", "name": "Bradley's Maths" },
+          "offers": {
+            "@type": "Offer",
+            "price": "14.99",
+            "priceCurrency": "GBP",
+            "availability": "https://schema.org/InStock",
+            "url": "https://payhip.com/b/IVWzJ"
+          }
+        },
+        {
+          "@type": "Product",
+          "name": "GCSE Geometry and Measures Booklet",
+          "description": "Complete Higher Tier Geometry syllabus worksheets and answers.",
+          "brand": { "@type": "Brand", "name": "Bradley's Maths" },
+          "offers": {
+            "@type": "Offer",
+            "price": "14.99",
+            "priceCurrency": "GBP",
+            "availability": "https://schema.org/PreOrder",
+            "url": "https://payhip.com/bradleysmaths"
+          }
+        },
+        {
+          "@type": "Product",
+          "name": "GCSE Probability and Statistics Booklet",
+          "description": "Complete Higher Tier Statistics syllabus worksheets and answers.",
+          "brand": { "@type": "Brand", "name": "Bradley's Maths" },
+          "offers": {
+            "@type": "Offer",
+            "price": "14.99",
+            "priceCurrency": "GBP",
+            "availability": "https://schema.org/PreOrder",
+            "url": "https://payhip.com/bradleysmaths"
           }
         }
       ]
