--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         <h2>Professional GCSE Resources</h2>
         
         <div class="trust-badge">
-            Excellence in Mathematics Education • Skopelos, Greece
+            Excellence in Mathematics Education 
         </div>
 
         <!-- PREMIUM SECTION -->
