--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <div class="container">
         <h1>Bradley's Maths</h1>
         <h2>Professional GCSE Resources</h2>
-        <div class="trust-badge">Professional UK Curriculum Resources</div>
+       <div class="trust-badge">Comprehensive Higher Tier Content • Aligned to AQA, Edexcel, OCR & WJEC</div>
 
         <!-- THE WIDGET -->
         <div class="daily-widget">
