--- a/index.html
+++ b/index.html
@@ -101,6 +101,8 @@
         <div class="btn-group">
             <a href="1.1 Natural Numbers and Integers.pdf" class="btn btn-free">1.1 Natural Numbers</a>
             <a href="1.2 Squares and Cubes.pdf" class="btn btn-free">1.2 Squares & Cubes</a>
+            <a href="1.3 Prime numbers, HCF, LCM.pdf" class="btn btn-free">1.3 Prime numbers, HCF, LCM</a>
+            <a href="1.4 Rational and Irrational numbers.pdf" class="btn btn-free">1.2 Rational and Irrational Numbers</a>
         </div>
         
         <div style="margin-top: 40px;">
