--- a/igcse.html
+++ b/igcse.html
@@ -98,7 +98,7 @@
 
         <div class="btn-group">
             <!-- Placeholders for your IGCSE store links -->
-            <a href="https://payhip.com/bradleysmaths" class="btn btn-primary">Browse the IGCSE Store</a>
+            <a href="https://payhip.com/https://payhip.com/b/krOXi" class="btn btn-primary">The Complete IGCSE Course Booklets</a>
         </div>
 
         <h3>Try Before You Buy</h3>
