--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                 ]
             },
             {
-                q: "Probability of rain on Sat is 0.4. If it rains Sat, P(rain Sun) = 0.8. If dry Sat, P(rain Sun) = 0.3. Find P(Rain on exactly one day).",
+                q: "The probability of rain on Saturday is 0.4. If it rains on Saturday, P(rain Sun) = 0.8. If it is dry on Saturday, P(rain Sun) = 0.3. Find P(Rain on exactly one day).",
                 steps: [
                     "Scenario 1: Rain Sat AND Dry Sun. $$0.4 \\times 0.2 = 0.08$$",
                     "Scenario 2: Dry Sat AND Rain Sun. $$0.6 \\times 0.3 = 0.18$$",
