--- a/igcse.html
+++ b/igcse.html
@@ -102,11 +102,15 @@
         </div>
 
         <h3>Try Before You Buy</h3>
-        <p style="margin-bottom: 20px; color: #ddd6fe;">Download the first topic from our booklets for free.</p>
+        <p style="margin-bottom: 20px; color: #ddd6fe;">Download five free samples, one from each booklet, to experience the quality of our work.</p>
+        <p style="margin-bottom: 20px; color: #ddd6fe;">Each sample is a complete worksheet and answer sheet in PDF format.</p>
         <div class="btn-group">
             <!-- You can link these to your IGCSE PDFs when ready -->
-            <a href="#" class="btn btn-free">Number Sample (PDF)</a>
-            <a href="#" class="btn btn-free">Geometry Sample (PDF)</a>
+            <a href="#" class="btn btn-free">Angle_Properties</a>
+            <a href="#" class="btn btn-free">Arcs_and_Sectors</a>
+            <a href="#" class="btn btn-free">Sets_and_Venn_Diagrams</a>
+            <a href="#" class="btn btn-free">Solving_Equations_Graphically</a>
+            <a href="#" class="btn btn-free">Vector_Geometry</a>
         </div>
         
         <div style="margin-top: 40px;">
