--- a/igcse.html
+++ b/igcse.html
@@ -126,12 +126,21 @@
         // You can populate this array with 0580 questions later.
         const problemBank = [
             {
+                q: "NON-CALCULATOR. Shabir invested \$1800 at 4% per year simple interest.  Calculate the value of his investment after 8 years.",
+                Steps:[
+                    "Calculate the interest in 1 year: $\\frac{4 \\times 1800}{100} = \$72$",
+                    "Multiply by 8 to get the interest earned in 8 years: $ 8 \\times 72 = \$576",
+                    "Add the original sum: $ 1800 + 576 = \$2376",
+                    "Final Answer: $$ \$2376 $$"
+                ]
+            },
+            {
                 q: "Welcome to the Bradley's Maths IGCSE Portal.<br><br>Daily revision questions covering the Cambridge 0580 syllabus will be appearing here soon.",
                 steps: [
                     "This widget will update every day with a new exam-standard question.",
                     "Detailed step-by-step solutions will be provided.",
                     "Check back soon to start your daily practice streak!"
-                ]
+                    ]
             }
         ];
 
