--- a/igcse.html
+++ b/igcse.html
@@ -128,9 +128,9 @@
             {
                 q: "NON-CALCULATOR. Shabir invested \$1800 at 4% per year simple interest.  Calculate the value of his investment after 8 years.",
                 steps: [
-                    "Calculate the interest in 1 year: $\\frac{4 \\times 1800}{100} = \$72$",
-                    "Multiply by 8 to get the interest earned in 8 years: $ 8 \\times 72 = \$576",
-                    "Add the original sum: $ 1800 + 576 = \$2376",
+                    "Calculate the interest in 1 year: $$\\frac{4 \\times 1800}{100} = \$72$$",
+                    "Multiply by 8 to get the interest earned in 8 years: $$ 8 \\times 72 = \$576$$",
+                    "Add the original sum: $$ 1800 + 576 = \$2376$$",
                     "Final Answer: $$ \$2376 $$"
                 ]
             },
